# inVRs

./: CMakeLists.txt  CTestConfig.cmake  Changelog.txt  LICENSE  README  README.md  VERSION  user.cmake  user.t3400.cmake
src/inVRs/InputInterface/ControllerManager/: AxisCorrection.cpp  AxisCorrection.h  ButtonCorrection.cpp  ButtonCorrection.h  CMakeLists.txt  Controller.cpp  Controller.h  ControllerManager.cpp  ControllerManager.h  ControllerManagerSharedLibraryExports.h  DeviceIndexMapping.cpp  DeviceIndexMapping.h  GlutCharKeyboardDevice.cpp  GlutCharKeyboardDevice.h  GlutMouseDevice.cpp  GlutMouseDevice.h  GlutSensorEmulatorDevice.cpp  GlutSensorEmulatorDevice.h  InputDevice.cpp  InputDevice.h  InputDeviceBase.cpp  InputDeviceBase.h  ScopedOSGLock.h  SensorCorrection.cpp  SensorCorrection.h  StrangeDevice.cpp  StrangeDevice.h  UdpDevice.cpp  UdpDevice.h
src/inVRs/Modules/: CMakeLists.txt
src/inVRs/Modules/2DPhysics/: 2DPhysicsEvents.cpp  2DPhysicsEvents.h  2DPhysicsSharedLibraryExports.h  ApplyAngularVelocityModifier.cpp  ApplyAngularVelocityModifier.h  ApplyForceModifier.cpp  ApplyForceModifier.h  CMakeLists.txt  Physics2DEntity.cpp  Physics2DEntity.h  Physics2DEntityType.cpp  Physics2DEntityType.h  RigidBody.cpp  RigidBody.h  RunAtPhysicsServerModifier.cpp  RunAtPhysicsServerModifier.h  Simulation2D.cpp  Simulation2D.h
src/inVRs/Modules/3DPhysics/: 3DPhysicsSharedLibraryExports.h  AccelerationSynchronisationModel.cpp  AccelerationSynchronisationModel.h  AccelerationSynchronisationModelFactory.cpp  AccelerationSynchronisationModelFactory.h  ArticulatedPhysicsEntity.cpp  ArticulatedPhysicsEntity.h  ArticulatedPhysicsEntityController.cpp  ArticulatedPhysicsEntityController.h  ArticulatedPhysicsEntityType.cpp  ArticulatedPhysicsEntityType.h  ArticulatedPhysicsEntityTypeFactory.cpp  ArticulatedPhysicsEntityTypeFactory.h  CMakeLists.txt  ChangeSynchronisationModelEvent.cpp  ChangeSynchronisationModelEvent.h  ChangedSynchronisationModel.cpp  ChangedSynchronisationModel.h  ChangedSynchronisationModelFactory.cpp  ChangedSynchronisationModelFactory.h  ChangedUserDataEvent.cpp  ChangedUserDataEvent.h  CreateCursorSpringConnectorEvent.cpp  CreateCursorSpringConnectorEvent.h  CreateLinkedPhysicsEntityEvent.cpp  CreateLinkedPhysicsEntityEvent.h  CursorSpringConnector.cpp  CursorSpringConnector.h  DeleteCursorSpringConnectorEvent.cpp  DeleteCursorSpringConnectorEvent.h  FullSynchronisationModel.cpp  FullSynchronisationModel.h  FullSynchronisationModelFactory.cpp  FullSynchronisationModelFactory.h  LinkedPhysicsEntity.cpp  LinkedPhysicsEntity.h  LinkedPhysicsEntityType.cpp  LinkedPhysicsEntityType.h  MessageSizeCounter.cpp  MessageSizeCounter.h  (+60 more)
src/inVRs/Modules/Interaction/: ButtonPressManipulationChangeModel.cpp  (+32 more)
src/inVRs/SystemCore/: ApplicationBase.cpp  ApplicationBase.h  ArgumentVector.cpp  ArgumentVector.h  BSpline.cpp  BSpline.h  CMakeLists.txt  ClassFactory.h  CommandLineArguments.cpp  CommandLineArguments.h  Configuration.cpp  Configuration.h  DataTypes.cpp  DataTypes.h  DebugOutput.cpp  DebugOutput.h  IdPool.cpp  IdPool.h  IdPoolListener.cpp  IdPoolListener.h  IdPoolManager.cpp  IdPoolManager.h  MessageFunctions.h  ModuleIds.h  NetMessage.cpp  NetMessage.h  Platform.cpp  Platform.h  ProfilingHelper.cpp  ProfilingHelper.h  RequestListener.cpp  RequestListener.h  SyncPipe.h  SystemCore.cpp  SystemCore.h  SystemCoreEvents.cpp  SystemCoreEvents.h  Timer.cpp  Timer.h  UtilityFunctions.cpp  (+15 more)
tools/applications/: CMakeLists.txt
tools/applications/JoystickServer/: CMakeLists.txt  JoystickServer.cpp  JoystickStateBlockDistributer.cpp  JoystickStateBlockDistributer.h
tools/applications/WiiDeviceServer/: DeviceStateSender.cpp  DeviceStateSender.h  Makefile  WiiDeviceServer.cpp  WiiDeviceServer.h  WiiDeviceServerOld.cpp  defaultConfig.xml  testDeviceStateSender.cpp  testWiiDevice.cpp
tools/applications/inVRsEditor/: CMakeLists.txt  ConfigCreator.cpp  ConfigCreator.h  EditorBase.cpp  EditorBase.h  EditorDataTypes.cpp  EditorDataTypes.h  EditorLayer.cpp  EditorLayer.h  ImageResources.qrc  Main.cpp  MainWindow.cpp  MainWindow.h  README
tools/libraries/: CMakeLists.txt
tools/libraries/3DMenu/: AUTHORS  CMakeLists.txt
tools/libraries/AvataraWrapper/: AvatarAnimationWriter.cpp  AvatarAnimationWriter.h  AvataraAvatar.h  AvataraAvatarBase.cpp  AvataraAvatarBase.h  AvataraWrapperExports.h  CMakeLists.txt  OpenSGAvataraAvatar.cpp  OpenSGAvataraAvatar.h
tools/libraries/CollisionMap/: CMakeLists.txt  CheckCollisionModifier.h  CheckCollisionModifierBase.cpp  CheckCollisionModifierBase.h  CollisionCircle.cpp  CollisionCircle.h  CollisionLineSet.cpp  CollisionLineSet.h  CollisionMap.cpp  CollisionMap.h  CollisionMapExports.h  CollisionObject.cpp  CollisionObject.h  OpenSGCollisionLineSetFactory.cpp  OpenSGCollisionLineSetFactory.h
tools/libraries/HeightMap/: AbstractHeightMapManager.cpp  AbstractHeightMapManager.h  CMakeLists.txt  HeightMap.cpp  HeightMap.h  HeightMapInterface.h  HeightMapManager.cpp  HeightMapManager.h  HeightMapModifier.h  HeightMapModifierBase.cpp  HeightMapModifierBase.h  OpenSGHeightMapManager.cpp  OpenSGHeightMapManager.h
tools/libraries/OpenSGApplicationBase/: CMakeLists.txt  OpenSGApplicationBase.cpp  OpenSGApplicationBase.h  shadowviewportmgr.cpp  shadowviewportmgr.h
tools/libraries/Particles/: CMakeLists.txt  COPYING  ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemConfig.cpp  ParticleSystemConfig.h  ParticleSystemParticles.h  ParticleType.cpp  ParticleType.h  Particles.cpp  Particles.h  TimeLine.h
tools/libraries/PhysicsSoundManager/: CMakeLists.txt  PhysicsSoundManager.cpp  PhysicsSoundManager.h
tools/libraries/Skybox/: CMakeLists.txt  Skybox.cpp  Skybox.h
tools/libraries/Sound/: CMakeLists.txt  Sound.cpp  Sound.h  SoundLoader.cpp  SoundLoader.h
tools/libraries/TextureManager/: CMakeLists.txt  EffectTextureManager.cpp  EffectTextureManager.h
tools/libraries/TrackdDevice/: CMakeLists.txt  TrackdDevice.cpp  TrackdDevice.h
tools/libraries/VrpnDevice/: CMakeLists.txt  VrpnDevice.cpp  VrpnDevice.h
(+655 files in other folders)
